apps/lina-site/i18n/en/docusaurus-plugin-content-docs/version-0.1.x/quick/2000-installation.md
---
slug: '/quick/installation'
title: 'Installation'
hide_title: true
description: 'How to install and initialize LinaPro in a few minutes — cloning the repository, configuring the database connection, initializing the database schema, loading demo data, and starting the development service. Complete the environment setup before cloning.'
keywords:
  - LinaPro
  - framework installation
  - quick start
  - git clone
  - clone repository
  - source code
  - stable release
  - config.yaml
  - database configuration
  - database initialization
  - make db.init
  - make dev
  - installation verification
  - development service
  - environment setup
  - demo data
  - make db.mock
---

Before cloning the repository, read [Environment Setup](/quick/environment) and make sure required components such as `Go`, `Node.js`, `pnpm`, and `PostgreSQL` are installed correctly.

## Clone the Repository

Use the following commands to fetch the framework source code:

```bash
# Install the latest experimental version
git clone --depth 1 https://github.com/linaproai/linapro.git linapro

# Or pin to a specific stable release, e.g., v0.1.0
git clone --depth 1 --branch v0.1.0 https://github.com/linaproai/linapro.git linapro
```

## Starting the Service

### Prepare PostgreSQL

`LinaPro` uses `PostgreSQL 14+` as its default database. `make db.init` and `make dev` do not start or manage the database, so prepare a reachable `PostgreSQL` instance first. For local development, you can use this container:

```bash
docker run \
  -p 5432:5432 \
  -e POSTGRES_PASSWORD=postgres \
  -e POSTGRES_USER=postgres \
  -e POSTGRES_DB=linapro \
  postgres:14-alpine
```

If local port `5432` is already occupied, map the container to another host port, such as `15432:5432`, and update the port in `database.default.link`.

### Configure the Database Connection

After cloning, enter the project directory and copy the config template as the active config file:

```bash
cd linapro
cp apps/lina-core/manifest/config/config.template.yaml apps/lina-core/manifest/config/config.yaml
```

Open `config.yaml` in an editor, find the database connection section, and update it to match your local `PostgreSQL` connection details:

```yaml title="apps/lina-core/manifest/config/config.yaml"
database:
  default:
    link: "pgsql:postgres:postgres@tcp(127.0.0.1:5432)/linapro?sslmode=disable"
```

The default configuration connects to the `linapro` database with `postgres:postgres@127.0.0.1:5432`. If your `PostgreSQL` instance uses a different username, password, host, port, or database name, update the value here.

### Initialize the Database

After the config is ready, run the following command to create the database schema and write the initial data:

```bash
make db.init confirm=init
```

After initialization, the database contains the basic table structure and default configuration data required by the system.

### Load Demo Data (Optional)

After the config is ready, run the following command to load the official demo data:

```bash
make db.mock confirm=mock
```

### Start the Development Service

Run the following command to start both frontend and backend services:

```bash
make dev
```

When the services start successfully, visit:

| Service | URL |
|---------|-----|
| Built-in admin workspace | `http://localhost:5666` |
| Backend `API` service | `http://localhost:8080` |

Log in to the admin workspace with the default account:

| Field | Value |
|-------|-------|
| Account | `admin` |
| Password | `admin123` |

## Common Commands

```bash
make dev               # Start frontend and backend services
make stop              # Stop all local services
make status            # Check service status
make db.init confirm=init # Reinitialize the database
make db.mock confirm=mock # Reload demo data
make test              # Run the full E2E test suite
make build             # Build a production-ready binary
make image             # Build the Docker image
```

## Installation Verification

After the service starts, open `http://localhost:5666` in your browser and log in with `admin / admin123`. If you can enter the admin workspace normally, the installation is complete.

If you run into issues, use the following checklist:

1. Confirm that `PostgreSQL` is running and that the database connection in `config.yaml` is correct
2. Check backend log output for service errors
3. Run `make status` to inspect frontend and backend process status
4. If the issue is still unresolved, visit [Community](/community) for help
